<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/default_sound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_weight="1"
        android:text="@string/settings_default_sound" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_soundPathLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/assign_sound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/default_sound"
        android:layout_weight="1"
        android:text="@string/settings_assign_sound" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/assign_sound"
        android:layout_marginTop="22dp"
        android:text="@string/settings_large_icon_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/assign_largeicon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/default_largeicon"
        android:layout_weight="1"
        android:text="@string/settings_assign_large_icon" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/assign_largeicon"
        android:layout_marginTop="27dp"
        android:text="@string/settings_small_icon_Label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/default_smallicon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_weight="1"
        android:text="@string/settings_default_small_icon" />

    <Button
        android:id="@+id/assign_smallicon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/default_smallicon"
        android:layout_weight="1"
        android:text="@string/settings_assign_small_icon" />

    <Button
        android:id="@+id/default_largeicon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_default_large_icon"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>