<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.alibaba.cloudpushdemo.bizactivity.SettingsActivity">

            <EditText
                android:id="@+id/userAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/inputplease"
                android:maxLines="1" />

            <Button
                android:id="@+id/bindAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/userAccount"
                android:layout_weight="1"
                android:text="@string/settings_bindaccount" />

            <Button
                android:id="@+id/unbindAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bindAccount"
                android:text="@string/settings_unbindaccount" />


            <EditText
                android:id="@+id/inputAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/unbindAccount"
                android:hint="@string/settings_inputAlias"
                android:maxLines="1" />

            <Button
                android:id="@+id/addAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/inputAlias"
                android:text="@string/settings_addAlias" />

            <Button
                android:id="@+id/removeAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/addAlias"
                android:text="@string/settings_removeAlias" />

            <!-- 我是分隔线~ -->
            <TextView
                android:id="@+id/aline"
                android:layout_width="wrap_content"
                android:layout_height="1dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/removeAlias"
                android:layout_marginTop="8dp"
                android:height="1dip"
                android:background="#FFFFFFFF"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/inputTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/aline"
                android:layout_marginTop="5dp"
                android:hint="@string/inputlabelplease"
                android:maxLines="1" />

            <Button
                android:id="@+id/bindTagToDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/inputTags"
                android:text="@string/settings_bindTagToDev" />

            <Button
                android:id="@+id/unbindTagFromDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bindTagToDev"
                android:text="@string/settings_unbindTagFromDev" />

            <Button
                android:id="@+id/bindTagToAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/unbindTagFromDev"
                android:text="@string/settings_bindTagToAccount" />

            <Button
                android:id="@+id/unbindTagFromAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bindTagToAccount"
                android:text="@string/settings_unbindTagFromAccount" />

            <Button
                android:id="@+id/bindTagToAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/unbindTagFromAccount"
                android:text="@string/settings_bindTagToAlias" />

            <Button
                android:id="@+id/unbindTagFromAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bindTagToAlias"
                android:text="@string/settings_unbindTagFromAlias" />

            <Button
                android:id="@+id/listTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/unbindTagFromAlias"
                android:text="@string/settings_listTags" />

            <Button
                android:id="@+id/listAliases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/listTags"
                android:text="@string/settings_listAliases" />

            <Button
                android:id="@+id/btn_silent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/listAliases"
                android:text="消息免打扰" />

            <Button
                android:id="@+id/btn_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_silent"
                android:text="关闭消息声音" />

            <Button
                android:id="@+id/btn_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_vibrate"
                android:text="关闭消息震动" />

            <Button
                android:id="@+id/btn_sound_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_sound"
                android:text="开启消息声音震动" />

            <Button
                android:id="@+id/btn_silent_notifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_sound_vibrate"
                android:text="通知免打扰" />

            <Button
                android:id="@+id/btn_sound_notifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_silent_notifi"
                android:text="关闭通知震动" />

            <Button
                android:id="@+id/btn_vibrate_notifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_sound_notifi"
                android:text="关闭通知声音" />

            <Button
                android:id="@+id/btn_sound_vibrate_notifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_vibrate_notifi"
                android:text="开启通知声音震动" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
